--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(HEADER_FILES
     include/inviwo/cyclonevis/processors/cyclonecontourlines.h
     include/inviwo/cyclonevis/processors/floodfillvolume.h
     include/inviwo/cyclonevis/processors/meshgraph.h
+    include/inviwo/cyclonevis/processors/meshtexturebuffermapper.h
     include/inviwo/cyclonevis/processors/volumeslicequad.h
     include/inviwo/cyclonevis/util/batchvolumesampler.h
 )
@@ -24,6 +25,7 @@ set(SOURCE_FILES
     src/processors/cyclonecontourlines.cpp
     src/processors/floodfillvolume.cpp
     src/processors/meshgraph.cpp
+    src/processors/meshtexturebuffermapper.cpp
     src/processors/volumeslicequad.cpp
     src/util/batchvolumesampler.cp
 )
