started on mapping texture to a sphere

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(HEADER_FILES
     include/inviwo/cyclonevis/processors/floodfillvolume.h
     include/inviwo/cyclonevis/processors/meshgraph.h
     include/inviwo/cyclonevis/processors/meshtexturebuffermapper.h
+    include/inviwo/cyclonevis/processors/texturedmeshrenderer.h
     include/inviwo/cyclonevis/processors/volumeslicequad.h
     include/inviwo/cyclonevis/util/batchvolumesampler.h
 )
@@ -26,6 +27,7 @@ set(SOURCE_FILES
     src/processors/floodfillvolume.cpp
     src/processors/meshgraph.cpp
     src/processors/meshtexturebuffermapper.cpp
+    src/processors/texturedmeshrenderer.cpp
     src/processors/volumeslicequad.cpp
     src/util/batchvolumesampler.cp
 )
